--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Cibertexto Tecnologia</title>
+    <title>Nome da marca</title>
     <link rel="icon" href="favicon.png">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <meta charset="utf-8">
